--- a/app/catalog.html
+++ b/app/catalog.html
@@ -345,27 +345,6 @@
                   <span class="catalog-nav-footer-btn-text">Выберите  фильтр</span>
                 </button>
                 <div class="catalog-nav-footer-text-field"></div>
-                <div class="catalog-nav-footer-grid">
-
-                  <button class="catalog-nav-footer-grid-change">
-                    <span class="visually-hidden">1 колонка</span>
-                    <svg class="svg-icon btn-catalog-nav-footer-grid-icon">
-                      <use
-                        xlink:href="./images/sprites/svg/sprite.symbol.svg#grid1col"
-                      ></use>
-                    </svg>
-                  </button>
-
-                  <button class="catalog-nav-footer-grid-change active">
-                    <span class="visually-hidden">2 колонки</span>
-                    <svg class="svg-icon btn-catalog-nav-footer-grid-icon">
-                      <use
-                      xlink:href="./images/sprites/svg/sprite.symbol.svg#grid2col"
-                      ></use>
-                    </svg>
-                  </button>
-
-                </div>
               </div>
             </div>
           </div>
@@ -376,6 +355,13 @@
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
@@ -422,10 +408,20 @@
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
                   />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
                 </div>
                 <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
                   <strong>Кофта</strong> с объёмными пл
@@ -465,10 +461,20 @@
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
                   />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
                 </div>
                 <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
                   <strong>Кофта</strong> с объёмными пл
@@ -503,15 +509,24 @@
               <span class="visually-hidden">понравилось</span>
               </button>
             </div>
-
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
                   />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
                 </div>
                 <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
                   <strong>Кофта</strong> с объёмными пл
@@ -546,15 +561,24 @@
               <span class="visually-hidden">понравилось</span>
               </button>
             </div>
-
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
                   />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
                 </div>
                 <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
                   <strong>Кофта</strong> с объёмными пл
@@ -589,15 +613,24 @@
               <span class="visually-hidden">понравилось</span>
               </button>
             </div>
-
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
                   <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
                     src="./images/dest/img/recommend-img2.jpg"
                     alt="recommend image"
                     data-rjs="2"
                   />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
                 </div>
                 <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
                   <strong>Кофта</strong> с объёмными пл
@@ -632,6 +665,111 @@
               <span class="visually-hidden">понравилось</span>
               </button>
             </div>
+            <div class="catalog-gal-column">
+              <a class="product-recommend-item product-recommend-item--catalog" href="#">
+                <div class="product-recommend-item-img product-recommend-item-img--catalog">
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
+                    src="./images/dest/img/recommend-img2.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
+                </div>
+                <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
+                  <strong>Кофта</strong> с объёмными пл
+                </h4>
+                <div class="product-recommend-item-price product-recommend-item-price--catalog">
+                  <span class="price-item">10 000 ₽</span>
+                </div>
+                <div class="product-recommend-item-color product-recommend-item-color--catalog">
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style="background-color: #000000;"
+                  ></div>
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style="background-color: #8c8c8c;"
+                  ></div>
+                  <div
+                    class="color-item color-item--border product-recommend-color-item"
+                    style="background-color: #ffffff; border-color: #000000;"
+                  ></div>
+                </div>
+              </a>
+              <button
+                class="btn-heart btn-heart--big product-recommend-btn-heart"
+                onclick="onAddLike(this)"
+              >
+              <svg class="svg-icon btn-heart-icon-reccomend">
+                <use
+                  xlink:href="./images/sprites/svg/sprite.symbol.svg#heart"
+                ></use>
+              </svg>
+              <span class="visually-hidden">понравилось</span>
+              </button>
+            </div>
+            <div class="catalog-gal-column">
+              <a class="product-recommend-item product-recommend-item--catalog" href="#">
+                <div class="product-recommend-item-img product-recommend-item-img--catalog">
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
+                    src="./images/dest/img/recommend-img1.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                  <img
+                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
+                    src="./images/dest/img/recommend-img2.jpg"
+                    alt="recommend image"
+                    data-rjs="2"
+                  />
+                </div>
+                <div class="product-recommend-item-preorder-wrapper">
+                  <p class="product-recommend-item-preorder">Предзаказ</p>
+                </div>
+                <h4 class="product-recommend-item-title product-recommend-item-title--catalog">
+                  <strong>Кофта</strong> с объёмными пл
+                </h4>
+                <div class="product-recommend-item-price product-recommend-item-price--catalog">
+                  <span class="price-item">10 000 ₽</span>
+                </div>
+                <div class="product-recommend-item-color product-recommend-item-color--catalog">
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style="background-color: #000000;"
+                  ></div>
+                  <div
+                    class="color-item product-recommend-color-item"
+                    style="background-color: #8c8c8c;"
+                  ></div>
+                  <div
+                    class="color-item color-item--border product-recommend-color-item"
+                    style="background-color: #ffffff; border-color: #000000;"
+                  ></div>
+                </div>
+              </a>
+              <button
+                class="btn-heart btn-heart--big product-recommend-btn-heart"
+                onclick="onAddLike(this)"
+              >
+              <svg class="svg-icon btn-heart-icon-reccomend">
+                <use
+                  xlink:href="./images/sprites/svg/sprite.symbol.svg#heart"
+                ></use>
+              </svg>
+              <span class="visually-hidden">понравилось</span>
+              </button>
+            </div>
+            
           </div>
         </section>
         <section class="catalog-pagin">
